syntax = "proto2";

package pinnacle.tag.v0alpha1;

import "google/protobuf/empty.proto";
import "pinnacle/v0alpha1/pinnacle.proto";

message SetActiveRequest {
  optional uint32 tag_id = 1;
  optional .pinnacle.v0alpha1.SetOrToggle set_or_toggle = 2;
}

message SwitchToRequest {
  optional uint32 tag_id = 1;
}

message AddRequest {
  optional string output_name = 1;
  repeated string tag_names = 2;
}
message AddResponse {
  repeated uint32 tag_ids = 1;
}

message RemoveRequest {
  repeated uint32 tag_ids = 1;
}

message GetRequest {}
message GetResponse {
  repeated uint32 tag_ids = 1;
}

message GetPropertiesRequest {
  optional uint32 tag_id = 1;
}
message GetPropertiesResponse {
  optional bool active = 1;
  optional string name = 2;
  optional string output_name = 3;
}

service TagService {
  rpc SetActive(SetActiveRequest) returns (google.protobuf.Empty);
  rpc SwitchTo(SwitchToRequest) returns (google.protobuf.Empty);
  rpc Add(AddRequest) returns (AddResponse);
  rpc Remove(RemoveRequest) returns (google.protobuf.Empty);
  rpc Get(GetRequest) returns (GetResponse);
  rpc GetProperties(GetPropertiesRequest) returns (GetPropertiesResponse);
}
