syntax = "proto2";

package pinnacle.v0alpha1;

import "google/protobuf/empty.proto";

message Geometry {
  optional int32 x = 1;
  optional int32 y = 2;
  optional int32 width = 3;
  optional int32 height = 4;
}

// NOTE TO SELF: If you change this you MUST change the mappings in the Lua API
enum SetOrToggle {
  SET_OR_TOGGLE_UNSPECIFIED = 0;
  SET_OR_TOGGLE_SET = 1;
  SET_OR_TOGGLE_UNSET = 2;
  SET_OR_TOGGLE_TOGGLE = 3;
}

message QuitRequest {}

message ReloadConfigRequest {}

// A manual ping request independent of any HTTP keepalive.
//
// Tonic does not seems to give you the means to run something
// when a keepalive ping fails, so this is for the Rust API to
// ping the compositor.
message PingRequest {
  optional bytes payload = 1;
}

message PingResponse {
  optional bytes payload = 1;
}

service PinnacleService {
  rpc Quit(QuitRequest) returns (google.protobuf.Empty);
  rpc ReloadConfig(ReloadConfigRequest) returns (google.protobuf.Empty);
  rpc Ping(PingRequest) returns (PingResponse);
}
